--- a/main.css
+++ b/main.css
@@ -146,7 +146,7 @@ h3{
     text-decoration: underline;
 }
 
-#jellemzoi{
+#jellemzoi, #feltalalas{
     background-color: bisque;
     border-radius: 15px;
     
